EDIT - 클라이언트 로그인시 데이터 초기화 구현
- `Message::toNovelRoom` 및 `NovelRoom::toMessage` 로 객체간의 변환 수행
- 서버가 데이터를 내릴 때, 클라이언트가 데이터를 받아서 초기화할때 형변환 메소드를 사용하여 데이터를 교환